--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,83 +1,61 @@
 version: '3'
-
-networks:
-  laravel:
-
 services:
-  site:
-    image: nginx:stable-alpine
-    container_name: nginx
-    ports:
-      - "8080:80"
-    volumes:
-      - ./src:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
-      - mysql
-    networks:
-      - laravel
-
-  mysql:
-    image: mysql:5.7
-    container_name: mysql
+  #PHP Service
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: digitalocean.com/php74
+    container_name: app
     restart: unless-stopped
     tty: true
+    environment:
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
+    working_dir: /var/www
     volumes:
-      - ./docker/dados-mysql:/var/lib/mysql
+      - ./:/var/www
+      - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    networks:
+      - app-network
+
+  #Nginx Service
+  webserver:
+    image: nginx:alpine
+    container_name: webserver
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./:/var/www
+      - ./nginx/conf.d/:/etc/nginx/conf.d/
+    networks:
+      - app-network
+
+  #MySQL Service
+  db:
+    image: mysql:5.7.22
+    container_name: db
+    restart: unless-stopped
+    tty: true
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: homestead
-      MYSQL_USER: homestead
-      MYSQL_PASSWORD: secret
-      MYSQL_ROOT_PASSWORD: secret
-    networks:
-      - laravel
-
-  php:
-    build:
-      context: .
-      dockerfile: ./docker/php.dockerfile
-    image: taironed/php
-    container_name: php
+      MYSQL_ROOT_PASSWORD: root
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
     volumes:
-      - ./src:/var/www/html
-    ports:
-      - "9000:9000"
+      - dbdata:/var/lib/mysql
+      - ./mysql/my.cnf:/etc/mysql/my.cnf
     networks:
-      - laravel
+      - app-network
 
-  composer:
-    image: composer:latest
-    container_name: composer
-    volumes:
-      - ./src:/var/www/html
-    working_dir: /var/www/html
-    depends_on:
-      - php
-    networks:
-      - laravel
+#Docker Networks
+networks:
+  app-network:
 
-  artisan:
-    build:
-      context: .
-      dockerfile: ./docker/php.dockerfile
-    image: taironed/artisan
-    container_name: artisan
-    volumes:
-      - ./src:/var/www/html
-    depends_on:
-      - mysql
-    working_dir: /var/www/html
-    entrypoint: ['php', '/var/www/html/artisan']
-    networks:
-      - laravel
-
-  npm:
-    image: node:latest
-    container_name: npm
-    volumes:
-      - ./src:/var/www/html
-    working_dir: /var/www/html
-    entrypoint: ['npm']
+#Volumes
+volumes:
+  dbdata:
